After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 795274 - wasapi fails to initialize on Windows 7
wasapi fails to initialize on Windows 7
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.14.0
Other Linux
: Normal blocker
: git master
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-04-15 13:14 UTC by Nirbheek Chauhan
Modified: 2018-04-16 14:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Initialization failure in wasapisink (544 bytes, text/plain)
2018-04-15 13:14 UTC, Nirbheek Chauhan
  Details
wasapi: Call CoIn/Uninitialize() around prepare() (3.25 KB, patch)
2018-04-16 14:08 UTC, Nirbheek Chauhan
committed Details | Review

Description Nirbheek Chauhan 2018-04-15 13:14:51 UTC
Created attachment 370955 [details]
Initialization failure in wasapisink

It claims that CoInitialize wasn't called, but that's strange because we call it in {src,sink}_init(). See attachment with a log for wasapisink (same happens with wasapisrc).
Comment 1 Nirbheek Chauhan 2018-04-16 14:08:14 UTC
Created attachment 370990 [details] [review]
wasapi: Call CoIn/Uninitialize() around prepare()

Seems to be required for exclusive mode and also for all
initialization on Windows 7
Comment 2 Nirbheek Chauhan 2018-04-16 14:09:26 UTC
Attachment 370990 [details] pushed as ff17a40 - wasapi: Call CoIn/Uninitialize() around prepare()