sys/wasapi/gstwasapisrc.c
@@ -436,6 +436,8 @@ gst_wasapi_src_prepare (GstAudioSrc * asrc, GstAudioRingBufferSpec * spec)
   guint bpf, rate, devicep_frames, buffer_frames;
   HRESULT hr;
 
+  CoInitialize (NULL);
+
   if (gst_wasapi_src_can_audioclient3 (self)) {
     if (!gst_wasapi_util_initialize_audioclient3 (GST_ELEMENT (self), spec,
             (IAudioClient3 *) self->client, self->mix_format, self->low_latency,
@@ -517,10 +519,6 @@ gst_wasapi_src_unprepare (GstAudioSrc * asrc)
 {
   GstWasapiSrc *self = GST_WASAPI_SRC (asrc);
 
-  if (self->sharemode == AUDCLNT_SHAREMODE_EXCLUSIVE &&
-      !gst_wasapi_src_can_audioclient3 (self))
-    CoUninitialize ();
-
   if (self->thread_priority_handle != NULL) {
     gst_wasapi_util_revert_thread_characteristics
         (self->thread_priority_handle);
@@ -542,6 +540,8 @@ gst_wasapi_src_unprepare (GstAudioSrc * asrc)
   }
 
   self->client_clock_freq = 0;
+
+  CoUninitialize ();
 
   return TRUE;
 }
